# vxs

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  Session.vim  WASM_TESTING.md  \  build_and_run.ps1  docker-entrypoint.sh  multitest.py  requirements.txt  test.sh
Archive/: WEBSOCKET_ARCHITECTURE.md  network_ws.rs
Archive/ws-proxy/: README.md  test_terrain.py
bgen/: README.md  __init__.py
bgen/llm/: client.py
bgen/llm/context/: API_CHEATSHEET.md  POLICY_TEMPLATE.py
bgen/orchestrator/: evaluator.py  iterate.py  prompt.py
bgen/runner/: helpers.py  metrics.py  run_policy.py  sandbox.py  schema.py
bgen_server/: __init__.py  server.py  test_server.py  test_server_llm.py
cuda_octree/: .clangd  CMakeLists.txt
cuda_octree/.cache/clangd/index/: cuda_test.cu.5B2F6AC070813618.idx  cuda_test.h.1A090309D4005DFB.idx  cuda_test.h.E85AAAA619AB1970.idx  interop.cu.41C7B449D9929F8B.idx  interop.h.59FBF359F5EC2258.idx
cuda_octree/include/: cuda_test.h  interop.h
cuda_octree/src/: cuda_test.cu  interop.cu
demo_policies/: README.md  iter0_crash.py  iter0_simple_crash.py  iter1_first_scan.py  iter1_first_turbine.py  iter2_all_scan.py  iter2_all_turbines.py  iter3_direct_flight.py  iter3_dynamic_scan.py  iter3_full_scan.py  iter3_hardcoded.py  iter3_perfect.py  iter3_perfect_scan.py  iter4_ground_first.py  run_demo.sh
logs/voxelsim_ppo/PPO_1/: events.out.tfevents.1754821697.MBP-3.local.35606.0
logs/voxelsim_ppo/PPO_2/: events.out.tfevents.1754821805.MBP-3.local.35652.0
logs/voxelsim_ppo/PPO_3/: events.out.tfevents.1754821834.MBP-3.local.35684.0
logs/voxelsim_ppo/PPO_4/: events.out.tfevents.1754822057.MBP-3.local.35815.0
logs/voxelsim_ppo/PPO_5/: events.out.tfevents.1754822180.MBP-3.local.35883.0
logs/voxelsim_ppo/PPO_6/: events.out.tfevents.1754822240.MBP-3.local.35919.0
logs/voxelsim_ppo/PPO_7/: events.out.tfevents.1754822345.MBP-3.local.35958.0
octree-gpu/: Cargo.toml  build.rs
octree-gpu/src/: lib.rs  octree.rs  page.rs
proxy/: README.md  package.json  proxy.js
px4-mc/: Cargo.toml  README.md  build.rs
px4-mc/cpp/px4_mc/: CMakeLists.txt  px4_sources.cmake  px4_sources.cmake.example
px4-mc/cpp/px4_mc/include/: px4_boardconfig.h  px4_mc_wrapper.hpp
px4-mc/cpp/px4_mc/include/matrix/: math.hpp
px4-mc/cpp/px4_mc/include/uORB/topics/: rate_ctrl_status.h  trajectory_setpoint.h  vehicle_attitude_setpoint.h  vehicle_local_position_setpoint.h
px4-mc/cpp/px4_mc/src/: px4_mc_wrapper.cpp
px4-mc/src/: lib.rs
python/: astartest.py  bench_view.py  frametest.py  headless.py  multi_agent_target_following.py  povtest.py  povtest_legacy.py  povtest_simple.py  sim_from_world.py  test.py  wasdtest.py  wind_turbine_demo.py
python/Experiments/: bench_view.py  bench_world48.py  losses.py  representation.py  representation_attention.py  representation_parallel  representation_parallel.py  representation_sparse.py  tests.py  world_tester.py
python/Experiments/voxelgym_env/: __init__.py
python/osm/: run_osm_voxel_app.py
python/osm/osm_voxel_app/: __init__.py  app.py  osm2voxel.py  requirements.txt
python/osm/osm_voxel_desktop/: app.py  desktop_index.html
python/runs/osm_voxel/: region.osm
python/scenarios/: __init__.py  wind_farm.py
python/train/: sb3_train.py  smoke_target_reward.py
python/train/envs/: grid_world.py  grid_world_astar.py  wrappers.py
python/train/models/: vox_features.py
python/train/rewards/: target_locate.py
voxelsim/: Cargo.toml  README.md
voxelsim-agent/: Cargo.toml
voxelsim-agent/src/behaviour/: mod.rs
voxelsim-compute/: Cargo.toml
voxelsim-compute-py/: Cargo.toml
voxelsim-compute-py/src/: lib.rs
voxelsim-compute/shaders/: filter.wgsl  frustum_cull.wgsl  frustum_cull_clean.wgsl  pack_instances.wgsl  voxelcoord.wgsl  voxelview.wgsl
voxelsim-compute/src/: buf.rs  compute.rs  lib.rs  main.rs  pipeline.rs  py.rs  test.rs
voxelsim-compute/src/rasterizer/: camera.rs  culling.rs  filter.rs  mod.rs  noise.rs  offload.rs  pack.rs  texture.rs
voxelsim-controller/: Cargo.toml
voxelsim-controller/src/: main.rs
voxelsim-daemon/: Cargo.toml
voxelsim-daemon/src/: controller.rs  main.rs  server.rs  state.rs
voxelsim-daemon/src/backend/: manual.rs  mod.rs  python.rs
voxelsim-frontend/: .env.example  .gitignore  README.md  SETUP.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
voxelsim-frontend/src/: App.tsx  main.tsx
voxelsim-frontend/src/components/: Canvas.tsx  LoadingScreen.css  LoadingScreen.tsx  Sidebar.css  Sidebar.tsx  StatusBar.css  StatusBar.tsx
voxelsim-frontend/src/services/: api.ts  (+2 more)
voxelsim-frontend/wasm/: README.md
voxelsim-py/: Cargo.toml
voxelsim-py/runs/2025-08-13T21-59-46-SimpleCNNEncoder_SimpleCNNDecoder/: events.out.tfevents.1755111586.boxhost.3079136.0  losses.csv
voxelsim-py/src/: lib.rs
voxelsim-renderer/: .vercelignore  Cargo.toml  README.md  index.html  vercel.json
voxelsim-renderer/.cargo/: config.toml
voxelsim-renderer/assets/: drone.gltf
voxelsim-renderer/src/: convert.rs  main.rs  network.rs  network_wasm.rs  pov.rs  render.rs  world.rs
voxelsim-renderer/wasm/: voxelsim-renderer.d.ts  voxelsim-renderer.js  voxelsim-renderer_bg.wasm.d.ts
voxelsim-simulator/: Cargo.toml  README.md  cc-log-wrapper.sh
voxelsim-simulator/src/: lib.rs  py.rs  sim.rs  terrain.rs
voxelsim-simulator/src/dynamics/: ardupilot.rs  drone.rs  mod.rs  peng.rs  pid.rs  px4.rs  quad.rs  standard.rs
voxelsim-simulator/src/dynamics/px4/: attitude.rs  mod.rs  position.rs  rate.rs  settings.rs
voxelsim-slam/: Cargo.toml  README.md
voxelsim-slam/src/: camera.rs  lib.rs  pipeline.rs  slam.rs  voxel.rs
voxelsim/python/: drone_env.py  envguide.py  povtest.py  test.py  wasdtest.py
voxelsim/python/Experiments/: loader.py  representation.py
voxelsim/python/Experiments/voxelgym_env/envs/: grid_world.py
voxelsim/src/: agent.rs  env.rs  lib.rs  network.rs  octree.rs  phase.rs  py.rs  sim.rs  terrain.rs
voxelsim/src/agent/: chase.rs  mod.rs  trajectory.rs  uncertainty.rs  viewport.rs
voxelsim/src/planner/: astar.rs  mod.rs
(+17 files in other folders)
