[package]
name = "voxelsim-compute"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxelsim_compute"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
bytemuck = "1.23.1"
dashmap = "6.1.0"
env_logger = "0.11.8"
futures = "0.3.31"
futures-intrusive = "0.5.0"
nalgebra = "0.33.2"
nalgebra-glm = "0.19.0"
pollster = "0.4.0"
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true } 
rayon = "1.10.0"
voxelsim = { path = "../voxelsim" }
wgpu = "26.0.0"
