[package]
name = "voxelsim-renderer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "voxelsim-renderer"
path = "src/main.rs"

[dependencies]
voxelsim = { path = "../voxelsim" }
bevy = "0.16.1"
bevy_panorbit_camera = "0.26.0"
crossbeam-channel = "0.5.15"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = {version = "2.0", features=["serde"]}
nalgebra = { version = "0.33.2", features = ["serde-serialize", "serde"] }

