[package]
name = "voxelsim"
version = "0.1.0"
edition = "2021"

[lib]
name = "voxelsim"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["pyo3"]

[dependencies]
bitflags = { version = "2.9.1", features = ["serde"] }
nalgebra = { version = "0.33.2", features = ["serde-serialize", "serde"] }
noise = "0.9.0"
tinyvec = { version = "1.9.0", features = ["serde"] }
rand = "0.9.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = {version = "2.0", features=["serde"]}
tokio = { version = "1.0", features = ["full"] }
pyo3 = { version = "0.25.1", features = ["extension-module"], optional = true }
